--- a/index.pug
+++ b/index.pug
@@ -5,7 +5,7 @@ html(ng-app='app')
     meta(charset='utf-8')
     title Hub | IC HealthHack
     link(rel="icon",href="images/favicon.png")
-    meta(name='description', content="Hub for participants of ICHack 17 powered by Microsoft")
+    meta(name='description', content="Hub for participants of IC HealthHack 2017")
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css')
     link(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css', rel='stylesheet')
