--- a/includes/navbar.pug
+++ b/includes/navbar.pug
@@ -8,7 +8,7 @@ nav.navbar.fixed-top.navbar-toggleable-md.navbar-default
          a.nav-item.nav-link.page-scroll.text-center(href='hardware.html') Hardware
          a.nav-item.nav-link.page-scroll.text-center(href='https://github.com/ichealthhack') GitHub
          a.nav-item.nav-link.page-scroll.text-center(href='https://ichealthhack.devpost.com/') Devpost
-         a.nav-item.nav-link.page-scroll.text-center(href='https://github.com/ichealthhack') Slack
+         a.nav-item.nav-link.page-scroll.text-center(href='https://ichealthhack.slack.com/') Slack
          a.nav-item.nav-link.page-scroll.text-center(data-toggle='modal', href='#contactModal') Contact
 
 br
