Add emergency contacts

--- a/includes/contact.pug
+++ b/includes/contact.pug
@@ -6,8 +6,10 @@
         br
         br
         h5.text-center
-          | Emergency Contact
-        h6 Placeholder - Number
+          | Emergency Contacts
+        h6 Tencho Tenev - 07843875376
+        h6 Miroslav Gašpárek - 07599496330
+        h6 Nele Quast - 07826418866
         br
         button.btn.btn-primary.btn-block(data-dismiss='modal', aria-hidden='true')
           | Close
