--- a/index.pug
+++ b/index.pug
@@ -21,7 +21,7 @@ html(ng-app='app')
       .container
         .row
           .col-lg-12.text-center
-            h2.m-t-0.text-primary IC Health Hack Participant Hub
+            h2.m-t-0.text-dark IC Health Hack Participant Hub
             hr.accent
       .container.wow.fadeInUp
         .row
