--- a/includes/navbar.pug
+++ b/includes/navbar.pug
@@ -1,7 +1,7 @@
 nav.navbar.fixed-top.navbar-toggleable-md.navbar-default
   button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarNavAltMarkup', aria-controls='navbarNavAltMarkup', aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon.stack
-  a.navbar-brand.text-light.page-scroll(href='index.html') Hub
+  a.navbar-brand.text-light.page-scroll(href='https://ichealthhack.github.io/hub') Hub
   #navbarNavAltMarkup.collapse.navbar-collapse
       .navbar-nav
          a.nav-item.nav-link.page-scroll.text-center(href='schedule.html') Schedule
