--- a/index.pug
+++ b/index.pug
@@ -7,6 +7,7 @@ html(ng-app='app')
     link(rel="icon",href="images/favicon.png")
     meta(name='description', content="Hub for participants of IC HealthHack 2017")
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(name='theme-color', content='#40ad6a')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css')
     link(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css', rel='stylesheet')
     link(rel='stylesheet', href='https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css')
