--- a/hardware.pug
+++ b/hardware.pug
@@ -33,6 +33,8 @@ html(ng-app='app')
               li
                  h6 Please use this page to reserve various devices from our hardware lab.
               li
+                 h6 Only devices can be booked through a mobile website. Please use the desktop version to order the modules.
+              li
                  h6 After submitting the form, you have 15 mins to collect your order.
               li
                  h6 This list is only updated when the hardware has been collected.
