Added home link, disabled Devpost, updated Slack link.

--- a/includes/navbar.pug
+++ b/includes/navbar.pug
@@ -4,11 +4,12 @@ nav.navbar.fixed-top.navbar-toggleable-md.navbar-default
   a.navbar-brand.text-light.page-scroll(href='https://ichealthhack.github.io/hub') Hub
   #navbarNavAltMarkup.collapse.navbar-collapse
       .navbar-nav
+         a.nav-item.nav-link.page-scroll.text-center(href='https://ichealthhack.github.io/') Home
          a.nav-item.nav-link.page-scroll.text-center(href='schedule.html') Schedule
          a.nav-item.nav-link.page-scroll.text-center(href='hardware.html') Hardware
          a.nav-item.nav-link.page-scroll.text-center(href='https://github.com/ichealthhack') GitHub
-         a.nav-item.nav-link.page-scroll.text-center(href='https://ichealthhack.devpost.com/') Devpost
-         a.nav-item.nav-link.page-scroll.text-center(href='https://ichealthhack.slack.com/') Slack
+         a.nav-item.nav-link.page-scroll.text-center(href='https://ichealthhack.github.io/hub/') Devpost
+         a.nav-item.nav-link.page-scroll.text-center(href='https://ichealthhack18.slack.com/') Slack
          a.nav-item.nav-link.page-scroll.text-center(data-toggle='modal', href='#contactModal') Contact
 
 br
