--- a/includes/contact.pug
+++ b/includes/contact.pug
@@ -7,9 +7,9 @@
         br
         h5.text-center
           | Emergency Contacts
-        h6 Tencho Tenev - 07843875376
-        h6 Miroslav Gašpárek - 07599496330
-        h6 Nele Quast - 07826418866
+        h6 Harjuno Perwironegoro - 07866469927
+        h6 Franz Chaca - 07746329116
+        h6 Laura Tan - 07415402475
         br
         button.btn.btn-primary.btn-block(data-dismiss='modal', aria-hidden='true')
           | Close
